Fixed alignment with navbar brand using media queries

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -17,7 +17,7 @@
 /* Nav */
 .dark,
 .dark nav {
-  background-color: #745777;
+  background-color: #666069;
   color: white;
 }
 
@@ -31,11 +31,20 @@
   background: linear-gradient(to left, #e4dfd9, #c2649a);
 }
 
+.dark, .dark .hvr-underline-from-center:before {
+  background: #fff;
+}
+
+.dark, .dark .hvr-underline-from-center:after {
+  background: #fff;
+}
+
 /* Home page */
 .dark,
 .dark #land {
   background-color: #222;
 }
+
 
 /* Portfolio */
 
@@ -66,11 +75,17 @@ footer .container {
 
 .switch {
   margin: 0.1rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  
+  
+
 }
+
 .inner-switch {
   display: inline-block;
   cursor: pointer;
-  border: 1px solid #555;
+  border: 3px solid #c2649a;
   border-radius: 1.25rem;
   width: 3.125rem;
   text-align: center;
